--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
 
-    <script src="js/task01.js"></script>
-    <script src="js/task02.js"></script>
+    <!-- <script src="js/task01.js"></script>
+    <script src="js/task02.js"></script> -->
+    <script src="js/task03.js"></script>
 </body>
 
 </html>
