fourth task is completed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
 
-    <!-- <script src="js/task01.js"></script>
-    <script src="js/task02.js"></script> -->
+    <script src="js/task01.js"></script>
+    <script src="js/task02.js"></script>
     <script src="js/task03.js"></script>
+    <script src="js/task04.js"></script>
 </body>
 
 </html>
