fifth task is completed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/task02.js"></script>
     <script src="js/task03.js"></script>
     <script src="js/task04.js"></script>
+    <script src="js/task05.js"></script>
 </body>
 
 </html>
